# Rust_Notebooks

./: README.md  script.py  supervised learning.ipynb
_notebooks/: basic.ipynb
android_ndk/hello_world/: Cargo.toml
android_ndk/hello_world/src/: lib.rs  main.rs
datatypes/: Cargo.toml
datatypes/src/: main.rs
flagapp/: Cargo.toml
flagapp/src/: main.rs
fltk/: Cargo.toml
fltk/fltk_start/: Cargo.toml
forloop/: Cargo.toml
forloop/src/: main.rs
gui_fltk/: build.rs
gui_fltk/src/: cmd_utilities.rs  code.txt  gui.rs  main.rs
gui_fltk_all_basement_working_copy_backup/: Cargo.toml
gui_fltk_all_basement_working_copy_backup/src/: main.rs
hello_cargo/: Cargo.toml
hello_world/: main.rs
ifelse/: Cargo.toml
ifelse/src/: main.rs
infiniteloop/: Cargo.toml
mutable/: Cargo.toml
pycharm/copy_file/: Cargo.toml  hello.txt
pycharm/copy_file/src/: hello.txt  main.rs
pycharm/hello/: Cargo.toml
pycharm/hello/src/: main.rs
pycharm/job_search/: main.py  results.txt  search.py  text.txt
pycharm/web_based_desktop_app/: Cargo.toml
pycharm/web_based_desktop_app/src/: main.rs
requests/: Cargo.toml
rust_scripts/: infiniteloop.rs  mutable.rs  uint.rs  variables.rs
uint/: Cargo.toml
variables/: Cargo.toml
whileloop/: Cargo.toml
whileloop/src/: main.rs
winit_start/src/: main.rs
winit_ui/winit_start/: Cargo.toml
