[package]
name = "gui_fltk"
version = "0.1.0"
authors = ["Santo Kalayil"]
edition = "2018"

# -------- below 1 line is used to set icon (binary_icon.ico) for binary exe ---
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "^0.14", git = "https://github.com/MoAlyousef/fltk-rs" }
rust-embed = "*"  # to embed image directly to binary without leaving external links
image = "*"


# -------- below 2 lines are used to set icon (binary_icon.ico) for binary exe ---
[target.'cfg(windows)'.build-dependencies]
winres = "0.1"